[tool.poetry]
name = "aioimaplib"
version = "1.1.0"
description = "Python asyncio IMAP4rev1 client library"
authors = ["Bruno Thomas <bruno@barreverte.fr>"]
license = "GPL-3.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
asynctest = "^0.13"
mock = "^5.1"
pytz = ">=2024"
tzlocal = "^5"
imaplib2 = "^3.6"
docutils = "^0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
